small changes in the imput-attribute

--- a/Basic/form.html
+++ b/Basic/form.html
@@ -124,7 +124,7 @@
                     <br>
                 </p>  
             </fieldset>
-            <div id="input-atribute">
+            <div id="input-attribute">
             <fieldset>
                 <legend><h3>HTML5 emil,number attribute:</h3></legend>  
                 <p>
@@ -148,7 +148,7 @@
                     <br>
                     <br> 
                     <label for="rate">Select value range:</label>
-                    <input type="range" name="rate" id="rate" min="0" max="1000" step="10">
+                    <input type="range" name="rate" id="rate" min="0" max="100" step="10">
                     <br>
                     <label for="link">site url:</label>
                     <input type="url" name="link" id="link">
