--- a/Javascript_basic/domTask5.html
+++ b/Javascript_basic/domTask5.html
@@ -19,6 +19,6 @@
   var element = document.getElementsByTagName("h1");
 
   function erase(event) {
-    event.target.remove(); //this remove() will remove the specified tag element
+    event.target.remove(); //this remove()  will remove or delete the specified tag element
   }
 </script>
