--- a/Javascript_basic/guessTheNumber.html
+++ b/Javascript_basic/guessTheNumber.html
@@ -18,7 +18,7 @@
       function check() {
         // Initialising the variables
         var playerGuess = Number(document.getElementById("guess").value);
-        var score = document.querySelector("span"); // querySelector() is function that takes first value based on the input
+        var score = document.querySelector("span"); // querySelector() is function that takes first value based on the input and querySelector() will select all the value based on the same input
         var sv = Number(score.textContent);
         var roundResult = document.getElementById("result");
         //Generating the random number
