--- a/Javascript_basic/domTask1.html
+++ b/Javascript_basic/domTask1.html
@@ -6,7 +6,8 @@
     <title>DOM task1</title>
   </head>
   <body>
-    <input id="transferText" onkeyup="say()" /> <!--this onkeyup(): event occurs when the user releases a key on the keyboard -->
+    <input id="transferText" onkeyup="say()" />
+    <!--this onkeyup(): event occurs when the user releases a key on the keyboard -->
     <!-- <button>print</button> -->
     <h1 id="disp"></h1>
 
