--- a/Javascript_basic/domTask8.html
+++ b/Javascript_basic/domTask8.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <p id="original-text">Place the mouse here</p>
+    <p id="original-text">Place the cursor here</p>
 
     <img
       id="new-image"
