design a admission button for my collage website

--- a/Positioning/position.html
+++ b/Positioning/position.html
@@ -31,7 +31,18 @@
         fixed:
         <div class="fixed1 box1 box">1 <br>fixed element</div>
         <div class="fixed2 box2 box">2 <br>fixed element</div>
-        <div class="fixed3 box3 box">3 <br>fixed element</div>
+        <!-- creating a admission button for my collage website -->
+        <a class="fixed3 box3 boxSize">
+            <span>A</span>
+            <span>D</span>
+            <span>M</span>
+            <span>I</span>
+            <span>S</span>
+            <span>S</span>
+            <span>I</span>
+            <span>O</span>
+            <span>N</span>
+        </a>
     </div>
     <br>
     <a href="sticky-pos.html"><input id="sticky" type="submit" value="sticky property"></a>
