design a admission button for my collage website

--- a/Positioning/position.html
+++ b/Positioning/position.html
@@ -32,7 +32,7 @@
         <div class="fixed1 box1 box">1 <br>fixed element</div>
         <div class="fixed2 box2 box">2 <br>fixed element</div>
         <!-- creating a admission button for my collage website -->
-        <a class="fixed3 box3 boxSize">
+        <a href="#" id="admission_btn" class="fixed_adm_btn box3 boxSize">
             <span>A</span>
             <span>D</span>
             <span>M</span>
