--- a/PlacementWorks/simpleWebSite-Assignment2/index.html
+++ b/PlacementWorks/simpleWebSite-Assignment2/index.html
@@ -12,10 +12,10 @@
         <nav>
             <ul class="tabs">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#product">Products</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -24,14 +24,14 @@
         <img src="home.jpeg" alt="">
     </div>
 
-    <div class="about">
+    <div class="about" id="about">
         <h2>About Us</h2>
         <div class="con-abo">
             <div class="abo-t" style="background-color: transparent;"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi modi asperiores enim fugiat vitae deserunt, possimus animi earum officiis doloribus? Quas quasi totam perspiciatis blanditiis doloribus dignissimos necessitatibus, voluptatum, itaque omnis consequatur mollitia optio, debitis architecto aliquid tempora adipisci tenetur consectetur labore nulla quisquam? Ad voluptas sapiente facilis atque eum.</p></div>
             <div class="abo"><img src="img1.jpeg"></div>
         </div>
     </div>
-    <div class="service">
+    <div class="service" id="service">
         <h2>Services</h2>
         <div class="con-serv">
             <div class="serv gap"><img src="img1.jpeg"></div>
@@ -40,7 +40,7 @@
         </div> <br>
         <div id="Click"><h3><a href="#">Click Here for more service</a></h3></div>
     </div>
-    <div class="product">
+    <div class="product" id="product">
         <h2>Product</h2>
         <div class="con-prod">
             <div class="prod gap"><img src="img1.jpeg"></div>
@@ -50,7 +50,7 @@
         </div><br>
         <div id="Click"><h3><a href="#">Click Here for more service</a></h3></div>
     </div>
-    <div class="container">
+    <div class="container" id="contact">
         <h2>Contact Us</h2>
         <form>
             <div class="form-group">
