--- a/PlacementWorks/simpleWebSite-Assignment2/index.html
+++ b/PlacementWorks/simpleWebSite-Assignment2/index.html
@@ -13,7 +13,7 @@
             <ul class="tabs">
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#service">Services</a></li>
                 <li><a href="#product">Products</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
