--- a/PlacementWorks/studentForm-Assignment3/index.html
+++ b/PlacementWorks/studentForm-Assignment3/index.html
@@ -22,19 +22,23 @@
                 <label>Department:</label> 
                 <select name="course" id="course">
                         <option value="-">select department</option>
-                        <option value="CSE">html</option>
-                        <option value="ECE">css</option>
-                        <option value="IT">js</option>
-                        <option value="AIDS">js</option>
+                        <option value="CSE">CSE</option>
+                        <option value="ECE">ECE</option>
+                        <option value="IT">IT</option>
+                        <option value="AIDS">AIDS</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="per10">10th percentage:</label>
-                <input type="text" id="per10" placeholder="10th %" required>
+                <input type="number" id="per10" placeholder="10th %" min="1" max="100" required>
             </div>
             <div class="form-group">
                 <label for="per12">12th percentage:</label>
-                <input type="text" id="per12" placeholder="12th %" required>
+                <input type="number" id="per12" placeholder="12th %" min="1" max="100" required>
+            </div>
+            <div class="form-group">
+                <label for="per10">degree percentage:</label>
+                <input type="number" id="perdeg" placeholder="degree %" min="1" max="100" required>
             </div>
             <div class="form-actions">
                 <button type="submit" class="submit-button">Submit</button>
