--- a/PlacementWorks/simpleWebSite-Assignment2/index.html
+++ b/PlacementWorks/simpleWebSite-Assignment2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 3/7/24</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="logo.png" type="images/icon">
 </head>
 <body>
     <header>
