--- a/PlacementWorks/simpleWork/exer3.html
+++ b/PlacementWorks/simpleWork/exer3.html
@@ -96,20 +96,24 @@
     <form>
         <label for="name">name:</label>
         <input type="text" id="name">
-        <button onclick="dis()">display</button>
+        <label for="name">name:</label>
+        <input type="text" id="fname">
+        <label for="name">name:</label>
+        <input type="text" id="lname">
+        <label for="name">name:</label>
+        <input type="text" id="gender">
+        <button>display</button>
     </form>
-    <!-- <div class="screen"></div>
-    <script>
-        function myFunction() {
-            var x = document.getElementById("name").value;
-            var display = document.
-        }
-        
-    </script> -->
-    <style>
-        p{
-            background-color: rgb(222, 218, 218);
-        }
-    </style>
+    <div class="html">
+
+    </div>
+   
+     <div class="css">
+ 
+     </div>
+ 
+    <div class="java">
+        <h1><p>&#169;</p></h1>
+    </div>
 </body>
 </html>
