--- a/PlacementWorks/multiplePages-Assignment-5/task4.4/index.html
+++ b/PlacementWorks/multiplePages-Assignment-5/task4.4/index.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main">
+        <img src="user.png" alt="">
         <form>
-            <label for=""></label>
-            <input type="text">
-            <label for=""></label>
-            <input type="text">
-            <button>Login</button>
-        </form>
+            <div>
+                <label for="emain">Email</label>
+                <input type="email" placeholder="xyz@gmail.com" required>
+            </div>
+            <div>
+                <label for="pwd">Password</label>
+                <input type="password" placeholder="********" required>
+            </div>
+            <div>
+                <button>Login</button>
+            </div>
+        </form> 
     </div>
 </body>
 </html>
