--- a/PlacementWorks/simpleWork/classWorks/exer3.html
+++ b/PlacementWorks/simpleWork/classWorks/exer3.html
@@ -15,7 +15,7 @@
     <h4>hihello</h4>
     <h5>hihello</h5>
     <h6>hihello</h6> -->
-    <p style="color: rgb(0, 0, 0);">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem adipisci ea quod culpa voluptate quaerat, quo, velit ex expedita dolorum dolorem! Ex omnis minus nostrum rerum distinctio animi aut consectetur, quibusdam tenetur, cum eos ut. Repellendus iste, unde explicabo ab, quia illo placeat, facere consequuntur reprehenderit excepturi possimus ipsam corporis.</p>
+    <p id="of" style="color: rgb(0, 0, 0);">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem adipisci ea quod culpa voluptate quaerat, quo, velit ex expedita dolorum dolorem! Ex omnis minus nostrum rerum distinctio animi aut consectetur, quibusdam tenetur, cum eos ut. Repellendus iste, unde explicabo ab, quia illo placeat, facere consequuntur reprehenderit excepturi possimus ipsam corporis.</p>
     <ol>
         <li>element 1</li>
         <li>element 2</li>
@@ -115,5 +115,7 @@
     <div class="java">
         <h1><p>&#169;</p></h1>
     </div>
+    <img src="img.jpg" alt="">
+    <div class="space"></div>
 </body>
 </html>
