--- a/PlacementWorks/webdesign-Assignment-6/header/index.html
+++ b/PlacementWorks/webdesign-Assignment-6/header/index.html
@@ -10,10 +10,12 @@
     <header>
         <nav>
             <ul>
+                <li><a href="#">&laquo;</a></li>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">&raquo;</a></li>
             </ul>
         </nav>
     </header>
