--- a/PlacementWorks/simpleWork/javaScript/index.html
+++ b/PlacementWorks/simpleWork/javaScript/index.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body style="background-color: black;"> 
-    <h1 id="demo" style="color: white;"></h1>
+    <h1 id="demo" style="color: rgb(17, 255, 0)"></h1>
+    <h1 id="arr1" style="color: rgb(17, 255, 0)"></h1>
+    <h1 id="arr2" style="color: rgb(17, 255, 0)"></h1>
+    <h1 id="arr3" style="color: rgb(17, 255, 0)"></h1>
+    <h1 id="arr4" style="color: rgb(17, 255, 0)"></h1>
+    <h1 id="arr5" style="color: rgb(17, 255, 0)"></h1>
+    <h1 id="arr6" style="color: rgb(17, 255, 0);"></h1>
     <script src="script.js"></script>
 </body>
 </html>
