--- a/PlacementWorks/javaScript/index.html
+++ b/PlacementWorks/javaScript/index.html
@@ -13,6 +13,6 @@
     <!-- <script src="task-5.js"></script> -->
     <!-- <script src="task-6.js"></script> -->
     <!-- <script src="task-7.js"></script> -->
-    <script src="task-8.js"></script>
+    <!-- <script src="task-8.js"></script> -->
 </body>
 </html>
