--- a/PlacementWorks/simpleWork/javaScript/index.html
+++ b/PlacementWorks/simpleWork/javaScript/index.html
@@ -8,11 +8,17 @@
 <body style="background-color: black;"> 
     <h1 id="demo" style="color: rgb(17, 255, 0)"></h1>
     <h1 id="arr1" style="color: rgb(17, 255, 0)"></h1>
-    <h1 id="arr2" style="color: rgb(17, 255, 0)"></h1>
+    <h1 id="arr2" class="arr2" style="color: rgb(17, 255, 0)"></h1>
     <h1 id="arr3" style="color: rgb(17, 255, 0)"></h1>
     <h1 id="arr4" style="color: rgb(17, 255, 0)"></h1>
     <h1 id="arr5" style="color: rgb(17, 255, 0)"></h1>
+    <button id="btn">display</button>
     <h1 id="arr6" style="color: rgb(17, 255, 0);"></h1>
+    <input type="text" id="screen"><button onclick="sendtocon()">send</button>
+    <button onclick="chco()">display</button>
+    <button ondblclick="dbchco()">date</button> 
+    <h1 id="d" style="color: rgb(17, 255, 0)"></h1>
     <script src="script.js"></script>
+    
 </body>
 </html>
