--- a/PlacementWorks/simpleWork/javaScript/index.html
+++ b/PlacementWorks/simpleWork/javaScript/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: black;"> 
+<body style="background-color: rgb(128, 128, 128);"> 
     <h1 id="demo" style="color: rgb(17, 255, 0)"></h1>
     <h1 id="arr1" style="color: rgb(17, 255, 0)"></h1>
     <h1 id="arr2" class="arr2" style="color: rgb(17, 255, 0)"></h1>
@@ -18,7 +18,7 @@
     <button onclick="chco()">display</button>
     <button ondblclick="dbchco()">date</button> 
     <h1 id="d" style="color: rgb(17, 255, 0)"></h1>
-    <script src="script.js"></script>
-    
+    <!-- <script src="script.js"></script> -->
+    <script src="loop.js"></script>
 </body>
 </html>
