--- a/PlacementWorks/simpleWork/form-validation/index.html
+++ b/PlacementWorks/simpleWork/form-validation/index.html
@@ -26,7 +26,7 @@
                 </select>
             </div>
             <div>
-                <label for="email">Email:</label> <input class="input-style" type="email" name="" id="email"
+                <label for="email">Email:</label> <input class="input-style" type="text" name="" id="email"
                     placeholder="example123@gmail.com" required>
             </div>
             <div>
