--- a/PlacementWorks/simpleWork/Jquery/index.html
+++ b/PlacementWorks/simpleWork/Jquery/index.html
@@ -55,9 +55,16 @@
             });
         });
         $(document).ready(function(){
-            $("#box").click(function () {
-                $("#box").animate({marginLeft:'500px',width:'500px'});
-            });
+            // if($("#box").() = ){
+            //     $("#box").hover(function () {
+            //         $("#box").animate({marginLeft:'80vw'});
+            //     });
+            // }else{
+                $("#box").focus(function () {
+                    $("#box").animate({marginLeft:'80vw'});
+                });
+            // }
+            
         });
         $(document).ready(function(){
             $("#popup").click(function () {
