--- a/PlacementWorks/front-end-Assignment-16/MarkSheet/index.html
+++ b/PlacementWorks/front-end-Assignment-16/MarkSheet/index.html
@@ -71,8 +71,10 @@
         font-size: 14px;
     }
 
-    .marks-table td {
+    .marks-table td,
+    input {
         color: black;
+        font-weight: bold;
     }
 
     #leftA {
@@ -211,6 +213,15 @@
         width: 40px;
         text-decoration: none;
     }
+
+    .inp {
+        background: none;
+        border: none;
+        scrollbar-width: none;
+        text-align: center;
+
+        width: 100px;
+    }
 </style>
 
 <body>
@@ -223,18 +234,18 @@
                             <h3>Sr.No.</h3>
                             <h3 style="color: rgba(81, 19, 19, 0.821);">00000000</h3>
                         </div>
-                        <div class="qr"><img src="./Untitled.png" alt="" width="100px"></div>
+                        <div class="qr"><img src="./qr.png" alt="" width="100px"></div>
                     </div>
                 </div>
                 <div class="main2">
-                    <div class="logo"><img src="./logo.png"></div>
+                    <div class="logo"><img src="./logo.png" style="margin-top: -110px;"></div>
                 </div>
                 <div class="main2">
                     <div class="logo"><img src="./curve.png" alt="" width="630px"></div>
                 </div>
                 <div class="para">
-                    <p style="font-size: 19px;"><b>Associated with Technical and Paramedical Education Council<br> An
-                            Autonomous Institution Recognized by Government of India</b></p>
+                    <p style="font-size: 19px;"><b><span>A</span>ssociated with Technical and Paramedical Education
+                            Council<br> An Autonomous Institution Recognized by Government of India</b></p>
                 </div>
                 <div class="maintable">
                     <h1>Annual Statement of Marks</h1>
@@ -244,7 +255,7 @@
                         <table class="marks-table">
                             <tr>
                                 <th colspan="2">Name of the Candidate<br>
-                                    <h4>[Candidate's Name]</h4>
+                                    <h4><input type="text" class="inp"></h4>
                                 </th>
                                 <th>Course name with Code <br>
                                     <h4>Diploma in Fire & Safety Management<br>DFS012</h4>
@@ -252,13 +263,13 @@
                             </tr>
                             <tr>
                                 <th>Reg. No.<br>
-                                    <h4>[Registration Number]</h4>
+                                    <h4><input type="text" class="inp"></h4>
                                 </th>
                                 <th>Enrollment No.<br>
-                                    <h4>[Enrollment Number]</h4>
+                                    <h4><input type="text" class="inp"></h4>
                                 </th>
                                 <th>Authorized Training Centre Name with Code<br>
-                                    <h4>(Authorized Training Centre's Name)<br>(Authorized Training Centre's Code)</h4>
+                                    <h4><input type="text" class="inp"><br><input type="text" class="inp"></h4>
                                 </th>
                             </tr>
                             <tr></tr>
@@ -278,86 +289,86 @@
                                     <td>DFS012-101</td>
                                     <td>Fire Science and Technology</td>
                                     <td>100</td>
-                                    <td><input type="number" maxlength="3" id="t1"></td>
-                                    <td><input type="number" maxlength="3" id="p1"></td>
-                                    <td><span id="tt1"></span></td>
-                                    <td></td>
+                                    <td><input type="number" id="theory1" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="number" id="practical1" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="text" id="total1" value="00" readonly></td>
+                                    <td id="totalWords1" class="total-words">Zero Zero</td>
                                 </tr>
                                 <tr>
                                     <td>DFS012-102</td>
                                     <td>Fire Prevention and Investigation</td>
                                     <td>100</td>
-                                    <td>XX</td>
-                                    <td>XX</td>
-                                    <td>00</td>
-                                    <td>Zero Zero</td>
+                                    <td><input type="number" id="theory2" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="number" id="practical2" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="text" id="total2" value="00" readonly></td>                                 <td id="totalWords2" class="total-words">Zero Zero</td>
                                 </tr>
                                 <tr>
                                     <td>DFS012-103</td>
                                     <td>Fire Protection and Survey</td>
                                     <td>100</td>
-                                    <td>00</td>
-                                    <td>XX</td>
-                                    <td>00</td>
-                                    <td>Zero Zero</td>
+                                    <td><input type="number" id="theory3" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="number" id="practical3" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="text" id="total3" value="00" readonly></td>
+                                    <td id="totalWords3" class="total-words">Zero Zero</td>
                                 </tr>
                                 <tr>
                                     <td>DFS012-104</td>
                                     <td>Fire Extinction and Control</td>
                                     <td>100</td>
-                                    <td>XX</td>
-                                    <td>00</td>
-                                    <td>00</td>
-                                    <td>Zero Zero</td>
+                                    <td><input type="number" id="theory4" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="number" id="practical4" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="text" id="total4" value="00" readonly></td>
+                                    <td id="totalWords4" class="total-words">Zero Zero</td>
                                 </tr>
                                 <tr>
                                     <td>DFS012-105</td>
                                     <td>Industrial Safety Management</td>
                                     <td>100</td>
-                                    <td>XX</td>
-                                    <td>XX</td>
-                                    <td>00</td>
-                                    <td>Zero Zero</td>
+                                    <td><input type="number" id="theory5" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="number" id="practical5" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="text" id="total5" value="00" readonly></td>
+                                    <td id="totalWords5" class="total-words">Zero Zero</td>
                                 </tr>
                                 <tr>
                                     <td>DFS012-106</td>
                                     <td>Practical I</td>
                                     <td>100</td>
-                                    <td>00</td>
-                                    <td>00</td>
-                                    <td>00</td>
-                                    <td>Zero Zero</td>
+                                    <td><input type="number" id="theory6" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="number" id="practical6" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="text" id="total6" value="00" readonly></td>
+                                    <td id="totalWords6" class="total-words">Zero Zero</td>
                                 </tr>
                                 <tr>
                                     <td>DFS012-107</td>
                                     <td>Practical II</td>
                                     <td>100</td>
-                                    <td>XX</td>
-                                    <td>00</td>
-                                    <td>00</td>
-                                    <td></td>
+                                    <td><input type="number" id="theory7" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="number" id="practical7" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="text" id="total7" value="00" readonly></td>
+                                    <td id="totalWords7" class="total-words">Zero Zero</td>
                                 </tr>
                                 <tr>
                                     <td>DFS012-108</td>
                                     <td>Practical III</td>
                                     <td>100</td>
-                                    <td>00</td>
-                                    <td>00</td>
-                                    <td>00</td>
-                                    <td>Zero Zero</td>
+                                    <td><input type="number" id="theory8" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="number" id="practical8" value="00" oninput="calculateTotal()"></td>
+                                    <td><input type="text" id="total8" value="00" readonly></td>
+                                    <td id="totalWords8" class="total-words">Zero Zero</td>
                                 </tr>
-                                <tr class="marks-table23">
-                                    <td colspan="" id="leftA">
-                                        <h4>Grand Total </h4>
-                                    </td>
-                                    <td colspan="6" id="leftA">000</td>
-                                </tr>
-                                <tr class="marks-table23">
-                                    <td colspan="" id="leftA">
-                                        <h4>in words</h4>
-                                    </td>
-                                    <td colspan="6" id="leftA">Zero Hundred Zero Zero</td>
-                                </tr>
+                            </tbody>
+                            <tr class="marks-table23">
+                                <td colspan="" style="text-align: left;">
+                                    <h4>Grand Total </h4>
+                                </td>
+                                <td colspan="6" style="text-align: left;padding: 0px; width: au;"><input type="text" id="gtot" readonly></td>
+                            </tr>
+                            <tr class="marks-table23">
+                                <td colspan="" id="leftA">
+                                    <h4>In words</h4>
+                                </td>
+                                <td colspan="6" style="text-align: left;" id="gtotwrd">Zero Zero Zero</td>
+                            </tr>
                     </div>
                     </tbody>
                     </table>
@@ -370,11 +381,11 @@
                             <th>Grade</th>
                         </tr>
                         <tr>
-                            <td>May 2020</td>
-                            <td>8</td>
-                            <td>PASS</td>
-                            <td>00.00%</td>
-                            <td>(Grade)</td>
+                            <td><input type="text" class="inp"></td>
+                            <td>T5+P3=8</td>
+                            <td id="result"></td>
+                            <td id="percentage"></td>
+                            <td id="grade"></td>
                         </tr>
                     </table>
                 </div>
@@ -395,11 +406,47 @@
         </div>
     </div>
     </div>
-    <br>
-    <br>
-    <div class="crtbtn"><button onclick="create()">Create Certificate</button></div>
     <script>
-        document.getElementById("tt1").innerHTML = document.getElementById("t1").value + document.getElementById("p1").value;
+        function calculateTotal() {
+            let subjects = 8;  // Number of subjects
+            let grandTotal = 0; // Initialize grand total
+
+            for (let i = 1; i <= subjects; i++) {
+                // Get theory and practical marks for each subject
+                let theory = parseFloat(document.getElementById(`theory${i}`).value) || 0;
+                let practical = parseFloat(document.getElementById(`practical${i}`).value) || 0;
+                
+                // Calculate total marks for the subject
+                let total = theory + practical;
+                document.getElementById(`total${i}`).value = total; // Set total in the field
+                document.getElementById(`totalWords${i}`).innerHTML =numberToWords(total);
+
+                // Add to grand total
+                grandTotal += total;
+                document.getElementById("gtotwrd").innerHTML =numberToWords(grandTotal);
+            }
+
+            // Set grand total
+            document.getElementById('gtot').value = grandTotal;
+
+            // Calculate and set percentage
+            let percentage = (grandTotal / (subjects * 100)) * 100;
+            document.getElementById('percentage').innerHTML = percentage.toFixed(2) + "%";
+
+            // Determine result
+            let result = grandTotal >= subjects * 40 ? "PASS" : "FAIL";
+            document.getElementById('result').innerHTML = result;
+
+            // Determine grade based on percentage
+            let grade = 'F';
+            if (percentage >= 90) grade = 'A+';
+            else if (percentage >= 80) grade = 'A';
+            else if (percentage >= 70) grade = 'B+';
+            else if (percentage >= 60) grade = 'B';
+            else if (percentage >= 50) grade = 'C';
+            else if (percentage >= 40) grade = 'D';
+            document.getElementById('grade').innerHTML = grade;
+        }
         // dateofresult
         date = new Date();
         year = date.getFullYear();
@@ -407,49 +454,45 @@
         day = date.getDate();
         document.getElementById("current_date").innerHTML = day + "/" + month + "/" + year;
 
-        // number to words
-        function numToWords(n) {
+        function numberToWords(num) {
             let words = [];
-            while (n > 0) {
-                let a = n % 10
+            while (num > 0) {
+                let a = num % 10
                 switch (a) {
-                    case 0:
-                        words.unshift("zero");
-                        break;
                     case 1:
-                        words.unshift("one");
+                        words.unshift("One");
                         break;
                     case 2:
-                        words.unshift("two");
+                        words.unshift("Two");
                         break;
                     case 3:
-                        words.unshift("three");
+                        words.unshift("Three");
                         break;
                     case 4:
-                        words.unshift("four");
+                        words.unshift("Four");
                         break;
                     case 5:
-                        words.unshift("five");
+                        words.unshift("Five");
                         break;
                     case 6:
-                        words.unshift("six");
+                        words.unshift("Six");
                         break;
                     case 7:
-                        words.unshift("seven");
+                        words.unshift("Seven");
                         break;
                     case 8:
-                        words.unshift("eight");
+                        words.unshift("Eight");
                         break;
                     case 9:
-                        words.unshift("nine");
+                        words.unshift("Nine");
                         break;
+                    default:
+                        words.unshift("Zero");
                 }
-                n = parseInt(n / 10)
+                num = parseInt(num / 10)
             }
             return words.join(" ");
         }
-        console.log(numToWords(100));
-
     </script>
 </body>
 
